add_subdirectory(write_float)
add_subdirectory(memcopy)
add_subdirectory(dynamic_shared_mem)
add_subdirectory(compute_chronological_consistency)
add_subdirectory(async_kernels)
add_subdirectory(dma_chronological_consistency)
add_subdirectory(kernel_struct_param)
add_subdirectory(indexing)
add_subdirectory(stream_events)
add_subdirectory(many_kernels_launch)